--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Ignore env files
 .env
+.env.* 
+*.key
+*.pem
+
+# Personal files, docs, prompts, notes
+*.md
+!README.md          # Allow ONLY your public README
+notes/
+prompts/
+private/
+*.txt
+
+# Ignore Bolt-specific metadata
+.bolt/
+bolt-output/
+bolt-cache/
